# Yolov8Practice

./: CMakeLists.txt  README.md  main.cpp
pythoncode/: yolomandarin (1).ipynb  yolomandarin.ipynb
